--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
       <article class="portfolio" data-page="portafolio">
 
         <header>
-          <h2 class="h2 article-title">Portfolio</h2>
+          <h2 class="h2 article-title">Proyectos</h2>
         </header>
 
         <section class="projects">
@@ -563,6 +563,10 @@
               <button data-filter-btn>Web Development</button>
             </li>
 
+            <li class="filter-item">
+              <button data-filter-btn>Other Projects</button>
+            </li>
+
           </ul>
 
           <div class="filter-select-box">
@@ -580,7 +584,7 @@
             <ul class="select-list">
 
               <li class="select-item">
-                <button data-select-item>All</button>
+                <button data-select-item>all</button>
               </li>
 
               <li class="select-item">
@@ -595,6 +599,10 @@
                 <button data-select-item>web development</button>
               </li>
 
+              <li class="select-item">
+                <button data-select-item>other projects</button>
+              </li>
+
             </ul>
 
           </div>
@@ -602,7 +610,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://github.com/evest-dev/personal-website/tree/main">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -612,7 +620,7 @@
                   <img src="./assets/images/project-1.png" alt="personal-portfolio" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Portafolio Personal</h3>
+                <h3 class="project-title">Portafolio Personal (2023)</h3>
 
                 <p class="project-category">Web Development</p>
 
@@ -620,7 +628,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="ui-design">
-              <a href="#">
+              <a href="https://dribbble.com/shots/22498741-Home-Asistente-Virtual">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -630,7 +638,7 @@
                   <img src="./assets/images/project-2.png" alt="asistente-virtual" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Asistente Virtual</h3>
+                <h3 class="project-title">Asistente Virtual (2022)</h3>
 
                 <p class="project-category">UI Design</p>
 
@@ -638,7 +646,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+              <a href="https://dribbble.com/shots/22426085-App-M-vil-nmViajes">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -648,15 +656,15 @@
                   <img src="./assets/images/project-3.png" alt="nm-viajes" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Nm Viajes</h3>
+                <h3 class="project-title">Nm Viajes (2022)</h3>
 
-                <p class="project-category">Flutter Aplication</p>
+                <p class="project-category">Flutter Application</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="ui-design">
-              <a href="#">
+              <a href="https://dribbble.com/shots/22498860-Plataforma-de-Aprendizaje-de-Matem-ticas">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -666,7 +674,7 @@
                   <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Plataforma de Aprendizaje de Matemáticas</h3>
+                <h3 class="project-title">Plataforma de Aprendizaje de Matemáticas (2022)</h3>
 
                 <p class="project-category">UI Design</p>
 
@@ -674,7 +682,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://dribbble.com/shots/17049971-Dise-o-Ferreter-a">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -684,7 +692,7 @@
                   <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
                 </figure>
 
-                <h3 class="project-title">El Ferretero SAC</h3>
+                <h3 class="project-title">El Ferretero SAC (2023)</h3>
 
                 <p class="project-category">Web Development</p>
 
@@ -702,7 +710,7 @@
                   <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Pokemon Info</h3>
+                <h3 class="project-title">Pokemon Info (2023)</h3>
 
                 <p class="project-category">UI Design</p>
 
@@ -720,7 +728,7 @@
                   <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Veterinaria</h3>
+                <h3 class="project-title">Veterinaria (2022)</h3>
 
                 <p class="project-category">UI Design</p>
 
@@ -738,7 +746,7 @@
                   <img src="./assets/images/project-8.png" alt="sistema-inventario-asistente" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Sistema de Inventario & Asistente Virtual</h3>
+                <h3 class="project-title">Sistema de Inventario & Asistente Virtual (2022)</h3>
 
                 <p class="project-category">Web Development</p>
 
@@ -756,9 +764,9 @@
                   <img src="./assets/images/project-9.png" alt="simple-covid-19" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Simple Web Covid-19</h3>
+                <h3 class="project-title">Simple Web Covid-19 (2022)</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Web Development</p>
 
               </a>
             </li>
@@ -771,12 +779,12 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-10.png" alt="arrival" loading="lazy">
+                  <img src="./assets/images/project-10.png" alt="education-frontend" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Simple Educación FrontEnd</h3>
+                <h3 class="project-title">Simple Educación FrontEnd (2022)</h3>
 
-                <p class="project-category">Android Aplication</p>
+                <p class="project-category">Android Application</p>
 
               </a>
             </li>
@@ -789,12 +797,12 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-11.png" alt="arrival" loading="lazy">
+                  <img src="./assets/images/project-11.png" alt="crud-products" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">CRUD Productos</h3>
+                <h3 class="project-title">CRUD Productos (2021)</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Web Development</p>
 
               </a>
             </li>
@@ -807,12 +815,48 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-12.png" alt="arrival" loading="lazy">
+                  <img src="./assets/images/project-12.png" alt="random-answers" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Respuestas Random</h3>
+                <h3 class="project-title">Respuestas Random (2023)</h3>
 
-                <p class="project-category">Flutter Aplications</p>
+                <p class="project-category">Flutter Application</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="other projects">
+              <a href="https://github.com/evest-dev/my-config-nvim">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-13.png" alt="vim-config" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Editor de Codigo en Terminal (2021)</h3>
+
+                <p class="project-category">Vim Configuration</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="other projects">
+              <a href="https://github.com/evest-dev/Hackintosh-Lenovo-ideapads340">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-14.png" alt="hackintosh-config" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Lenovo IdeaPad S340 -15IWL (2021)</h3>
+
+                <p class="project-category">Hackintosh Configuration</p>
 
               </a>
             </li>
