--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
                   <img src="./assets/images/project-12.png" alt="random-answers" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Respuestas Random (2023)</h3>
+                <h3 class="project-title">Random YesNo Answers (2023)</h3>
 
                 <p class="project-category">Flutter Application</p>
 
