--- a/index.html
+++ b/index.html
@@ -617,12 +617,84 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.png" alt="personal-portfolio" loading="lazy">
+                  <img src="./assets/images/personal_web.png" alt="personal-portfolio" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Portafolio Personal (2023)</h3>
 
                 <p class="project-category">Web Development</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="https://github.com/evest-dev/random-videos">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/random_videos.png" alt="asistente-virtual" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Videos Random (2023)</h3>
+
+                <p class="project-category">Flutter Application</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://dribbble.com/shots/17049971-Dise-o-Ferreter-a">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/el_ferretero.png" alt="dsm." loading="lazy">
+                </figure>
+
+                <h3 class="project-title">El Ferretero SAC (2023)</h3>
+
+                <p class="project-category">Web Development</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/random_answer.png" alt="random-answers" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Respuestas Random (2023)</h3>
+
+                <p class="project-category">Flutter Application</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="ui-design">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/pokemon_info.png" alt="metaspark" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Pokemon Info (2023)</h3>
+
+                <p class="project-category">UI Design</p>
 
               </a>
             </li>
@@ -635,7 +707,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="asistente-virtual" loading="lazy">
+                  <img src="./assets/images/virtual_assistant.png" alt="asistente-virtual" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Asistente Virtual (2022)</h3>
@@ -653,7 +725,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.png" alt="nm-viajes" loading="lazy">
+                  <img src="./assets/images/nm_viajes.png" alt="nm-viajes" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Nm Viajes (2022)</h3>
@@ -671,7 +743,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
+                  <img src="./assets/images/math_platform.png" alt="brawlhalla" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Plataforma de Aprendizaje de Matemáticas (2022)</h3>
@@ -682,17 +754,17 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://dribbble.com/shots/17049971-Dise-o-Ferreter-a">
+              <a href="#">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
+                  <img src="./assets/images/inventario.png" alt="sistema-inventario-asistente" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">El Ferretero SAC (2023)</h3>
+                <h3 class="project-title">Sistema de Inventario & Asistente Virtual (2022)</h3>
 
                 <p class="project-category">Web Development</p>
 
@@ -707,25 +779,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Pokemon Info (2023)</h3>
-
-                <p class="project-category">UI Design</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="ui-design">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/veterinaria.png" alt="summary" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Veterinaria (2022)</h3>
@@ -743,25 +797,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-8.png" alt="sistema-inventario-asistente" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Sistema de Inventario & Asistente Virtual (2022)</h3>
-
-                <p class="project-category">Web Development</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-9.png" alt="simple-covid-19" loading="lazy">
+                  <img src="./assets/images/covid_page.png" alt="simple-covid-19" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Simple Web Covid-19 (2022)</h3>
@@ -779,7 +815,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-10.png" alt="education-frontend" loading="lazy">
+                  <img src="./assets/images/app_education.png" alt="education-frontend" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Simple Educación FrontEnd (2022)</h3>
@@ -797,30 +833,12 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-11.png" alt="crud-products" loading="lazy">
+                  <img src="./assets/images/crud.png" alt="crud-products" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">CRUD Productos (2021)</h3>
 
                 <p class="project-category">Web Development</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="https://github.com/evest-dev/randomAnswers">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-12.png" alt="random-answers" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Random YesNo Answers (2023)</h3>
-
-                <p class="project-category">Flutter Application</p>
 
               </a>
             </li>
@@ -833,7 +851,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-13.png" alt="vim-config" loading="lazy">
+                  <img src="./assets/images/vim.png" alt="vim-config" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Editor de Codigo en Terminal (2021)</h3>
@@ -851,7 +869,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-14.png" alt="hackintosh-config" loading="lazy">
+                  <img src="./assets/images/hackintosh.png" alt="hackintosh-config" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Lenovo IdeaPad S340 -15IWL (2021)</h3>
