--- a/index.html
+++ b/index.html
@@ -608,9 +608,27 @@
           </div>
 
           <ul class="project-list">
+            
+          <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="https://github.com/evest-dev/flutter-widgets">
 
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/widgets_app.png" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Flutter Widgets (2023)</h3>
+
+                <p class="project-category">Flutter Application</p>
+
+              </a>
+            </li>
+            
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://github.com/evest-dev/personal-website/tree/main">
+              <a href="https://github.com/evest-dev/personal-website/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
