--- a/index.html
+++ b/index.html
@@ -351,8 +351,9 @@
   
             <li class="timeline-item">
   
-              <h4 class="h4 timeline-item-title">Trabajo Remoto Hibrido / Startup Fintech</h4>
-  
+              <h4 class="h4 timeline-item-title">Desarrollador de Aplicaciones Multiplataforma</h4>
+              
+              <span>Trabajo Hibrido, Startup Fintech</span>
               <span>Marzo - Julio 2023</span>
   
               <p class="timeline-text">
