--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 40%;"></div>
+                <div class="skill-progress-fill" style="width: 80%;"></div>
               </div>
 
             </li>
@@ -546,45 +546,46 @@
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 40%;"></div>
+                <div class="skill-progress-fill" style="width: 70%;"></div>
               </div>
 
             </li>
 
-            <div class="title-wrapper">
-                <h5 class="h5">Responsabilidad</h5>
-                <data value="40">80%</data>
+            <li class="skills-item">
+              <div class="title-wrapper">
+                  <h5 class="h5">Responsabilidad</h5>
+                  <data value="40">80%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 40%;"></div>
+                <div class="skill-progress-fill" style="width: 80%;"></div>
               </div>
 
             </li>
             
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                  <h5 class="h5">Ingles</h5>
+                  <data value="40">50%</data>
+                </div>
+
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 50%;"></div>
+                </div>
+
             </li>
 
-            <div class="title-wrapper">
-                <h5 class="h5">Ingles</h5>
-                <data value="40">50%</data>
-              </div>
+            <li class="skills-item">
 
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 40%;"></div>
-              </div>
+              <div class="title-wrapper">
+                  <h5 class="h5">Puntualidad</h5>
+                  <data value="40">85%</data>
+                </div>
 
-            </li>
-
-             </li>
-
-            <div class="title-wrapper">
-                <h5 class="h5">Puntualidad</h5>
-                <data value="40">85%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 40%;"></div>
-              </div>
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 85%;"></div>
+                </div>
 
             </li>
 
