--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             Actualmente me encuentro especializando 1 año en el desarrollo de aplicaciones móviles Multiplataforma
             y UI Design, utilizando el framework Flutter y Figma para el diseños de interfaces.
             Mi enfoque actual se centra en la creación de aplicaciones móviles multiplataforma, el diseño y desarrollo 
-            de interfaces moviles dinamicas solidas y de calidad, consumo de API’S, manejo de datos con en la nube y 
+            de interfaces moviles dinamicas, solidas y de calidad, consumo de API’S, manejo de datos en la nube y 
             de forma local aplicando principios básicos de Clean Architecture. 
           </p>
         </section>
