--- a/index.html
+++ b/index.html
@@ -731,6 +731,24 @@
 
               </a>
             </li>
+
+            <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="https://github.com/evest-dev/app_peliculas">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/app_peliculas.png" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">App Peliculas (2023)</h3>
+
+                <p class="project-category">Flutter Application</p>
+
+              </a>
+            </li>
             
             <li class="project-item  active" data-filter-item data-category="web development">
               <a href="https://github.com/evest-dev/personal-website/">
